# Embedding-Rust

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.cargo/: config.toml
model_repository/jina-embeddings-v3/: config.pbtxt
model_repository/jina-reranker-v2/: config.pbtxt
src/: main.rs  middleware.rs
src/api/: embeddings.rs  health.rs  mod.rs  openapi.rs  reranking.rs
src/config/: mod.rs
src/error/: mod.rs
src/models/: mod.rs
src/repositories/: mod.rs  triton_client.rs
src/services/: embedding_service.rs  mod.rs  reranking_service.rs  tokenizer_service.rs
