[package]
name = "embedding-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.8.8"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# OpenAPI/Swagger
utoipa = { version = "5.4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for Triton
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"

# Configuration
config = "0.14"
dotenv = "0.15"

# Tokenizers
tokenizers = "0.22.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Numerical computing
ndarray = "0.17.2"

# Async traits
async-trait = "0.1"

# Progress bars
indicatif = "0.17"
